--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -12,7 +12,7 @@
   <tbody>
     <tr
       *ngFor="let employee of employees; index as i; let e = even; let o = odd"
-      [ngClass]="{ oddstyle: o, evenstyle: e, highlight:hover }"
+      [ngClass]="{ oddstyle: o, evenstyle: e}"
             
     >
       <td appHover>{{ employee.name }}</td>
