--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>Employee App</h1>
+<mat-toolbar color="primary" class="header">
+  <button mat-button color="accent" routerLink="/" >Home</button>
+  <button mat-button color="accent" routerLink = "/employees">Employees</button>
+</mat-toolbar>
 
-<book></book>
+<router-outlet></router-outlet>
+
